# humanoid-control

./: .gitignore  LICENSE  README.md
humanoid-legged-description/: CMakeLists.txt  package.xml
humanoid-legged-description/config/: joint_names_humanoid_legged.yaml
humanoid-legged-description/launch/: display.launch  gazebo.launch
humanoid-legged-description/meshes/: arm_l1_link.STL  arm_l2_link.STL  arm_l3_link.STL  arm_l4_link.STL  arm_l5_link.STL  arm_r1_link.STL  arm_r2_link.STL  arm_r3_link.STL  arm_r4_link.STL  arm_r5_link.STL  arm_r6_link.STL  head_yaw_link.STL  leg_l1_link.STL  leg_l2_link.STL  leg_l3_link.STL  leg_l5_link.STL  leg_l6_link.STL  leg_r1_link.STL  leg_r2_link.STL  leg_r3_link.STL  leg_r5_link.STL  leg_r6_link.STL  waist_yaw_link.STL
humanoid-legged-description/mjcf/: humanoid_legged.urdf  humanoid_legged.xml
humanoid-legged-description/urdf/: humanoid_legged.csv  humanoid_legged.urdf  humanoid_legged_control.urdf  humanoid_legged_origin.urdf
humanoid_common/: CMakeLists.txt  package.xml
humanoid_common/include/humanoid_common/hardware_interface/: ContactSensorInterface.h  HybridJointInterface.h
humanoid_controllers/: CMakeLists.txt  humanoid_controllers_plugins.xml  package.xml
humanoid_controllers/config/: controllers.yaml
humanoid_controllers/include/humanoid_controllers/: SafetyChecker.h  TargetTrajectoriesPublisher.h  humanoidController.h
humanoid_controllers/include/humanoid_controllers/visualization/: humanoidSelfCollisionVisualization.h
humanoid_controllers/launch/: joy_teleop.launch  load_cheat_controller.launch  load_joy_controller.launch  load_normal_controller.launch
humanoid_controllers/src/: CheatControllerNode.cpp  JoyControllerNode.cpp  NormalControllerNode.cpp  TargetTrajectoriesPublisher.cpp  humanoidController.cpp
humanoid_dummy/: CMakeLists.txt  package.xml
humanoid_dummy/include/humanoid_dummy/gait/: GaitKeyboardPublisher.h  GaitReceiver.h  ModeSequenceTemplateRos.h
humanoid_dummy/include/humanoid_dummy/visualization/: HumanoidVisualizer.h
humanoid_dummy/launch/: legged_robot_ddp.launch  legged_robot_ipm.launch  legged_robot_sqp.launch  multiplot.launch
humanoid_dummy/rviz/: humanoid.rviz
humanoid_dummy/src/: HumanoidDdpMpcNode.cpp  HumanoidDummyNode.cpp  HumanoidGaitCommandNode.cpp  HumanoidIpmMpcNode.cpp  HumanoidPoseCommandNode.cpp  HumanoidSqpMpcNode.cpp
humanoid_dummy/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp
humanoid_dummy/src/visualization/: HumanoidVisualizer.cpp
humanoid_estimation/: CMakeLists.txt  package.xml
humanoid_estimation/include/humanoid_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
humanoid_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
humanoid_interface/: CMakeLists.txt  package.xml
humanoid_interface/config/command/: gait.info  reference.info
humanoid_interface/config/mpc/: task.info
humanoid_interface/include/humanoid_interface/: HumanoidInterface.h  HumanoidPreComputation.h  package_path.h.in
humanoid_interface/include/humanoid_interface/common/: ModelSettings.h  Types.h  utils.h
humanoid_interface/include/humanoid_interface/constraint/: EndEffectorLinearConstraint.h  FootRollConstraint.h  FrictionConeConstraint.h  LeggedSelfCollisionConstraint.h  NormalVelocityConstraintCppAd.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
humanoid_interface/include/humanoid_interface/cost/: HumanoidQuadraticTrackingCost.h
humanoid_interface/include/humanoid_interface/dynamics/: HumanoidDynamicsAD.h
humanoid_interface/include/humanoid_interface/foot_planner/: CubicSpline.h  SplineCpg.h  SwingTrajectoryPlanner.h
humanoid_interface/include/humanoid_interface/gait/: Gait.h  GaitSchedule.h  LegLogic.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
humanoid_interface/include/humanoid_interface/initialization/: HumanoidInitializer.h
humanoid_interface/include/humanoid_interface/reference_manager/: SwitchedModelReferenceManager.h
humanoid_interface/src/: HumanoidInterface.cpp  HumanoidPreComputation.cpp
humanoid_interface/src/common/: ModelSettings.cpp
humanoid_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FootRollContraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
humanoid_interface/src/dynamics/: HumanoidDynamicsAD.cpp
humanoid_interface/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
humanoid_interface/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
humanoid_interface/src/initialization/: HumanoidInitializer.cpp
humanoid_interface/src/reference_manager/: SwitchedModelReferenceManager.cpp
humanoid_interface/test/: AnymalFactoryFunctions.cpp
humanoid_interface/test/constraint/: testEndEffectorLinearConstraint.cpp  testFrictionConeConstraint.cpp  testZeroForceConstraint.cpp
humanoid_interface/test/include/humanoid_interface/test/: AnymalFactoryFunctions.h
humanoid_wbc/: CMakeLists.txt  package.xml
humanoid_wbc/include/humanoid_wbc/: HierarchicalWbc.h  HoQp.h  Task.h  WbcBase.h  WeightedWbc.h
humanoid_wbc/src/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
humanoid_wbc/test/: HoQp_test.cpp
mujoco_sim/: CMakeLists.txt  package.xml
mujoco_sim/script/: draw_torque.py  humanoid_sim.py  joy.py  mujoco_base.py  teleop.py
