<?xml version="1.0"?>
<package format="2">
    <name>humanoid_wbc</name>
    <version>0.0.0</version>
    <description>Whole body control</description>
    <maintainer email="contact@bridgedp.com">bridgedp</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>humanoid_interface</depend>
    <depend>qpoases_catkin</depend>
    <depend>pinocchio</depend>
</package>
